--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    apollo{
+        generateKotlinModels = true
+    }
 }
 
 dependencies {
