--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DaggerApp">
+        <activity android:name=".ui.nestedrv.NestedRVActivity"></activity>
         <activity android:name=".ui.apollo.LaunchListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.list.ListActivity" />
-        <activity android:name=".ui.login.MainActivity">
-        </activity>
+        <activity android:name=".ui.login.MainActivity"></activity>
     </application>
 
 </manifest>
