--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    apollo{
+    apollo {
         generateKotlinModels = true
         rootPackageName.set("com.app.daggerapp")
     }
@@ -67,10 +67,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
-    //Coroutines
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -78,7 +74,7 @@ dependencies {
     //rxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
-
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
     //okHttp
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
@@ -91,5 +87,6 @@ dependencies {
     //Apollo
     implementation("com.apollographql.apollo:apollo-runtime:2.2.0")
     implementation "com.apollographql.apollo:apollo-android-support:2.2.0"
+    implementation 'com.apollographql.apollo:apollo-rx2-support:2.2.0'
 
 }
