--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
     implementation "com.apollographql.apollo:apollo-android-support:2.2.0"
     implementation 'com.apollographql.apollo:apollo-rx2-support:2.2.0'
 
+    //Google maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+
 }
